--- a/media/style.css
+++ b/media/style.css
@@ -5,29 +5,27 @@ background {
     justify-content: center
 }
 .name {
+    display: flex;
     font-family: 'Six Caps';
     font-size: 64px;
-    line-height: 22px;
-    padding: 40px;
-    font-weight: light;
+    align-items: center;
+    padding-left: 20px;
+    margin-right: 200px;
     color: black;
 }
 .list {
-    width: 1350px;
+    width: 1440px;
     height: 105px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 3px solid #828282;
 }
-.menue {
-    font-family: 'Oswald';
-    font-size: 34px;
-    line-height: 22px;
-    padding: 30px;
-    font-weight: light;
-    color: black;
-    text-decoration: none;
+.menu {
+display: flex;
+width: 1440px;
+height: 105px;
+background-color: grey;
+justify-content: space-between;
 }
 * {
     margin: 0;
@@ -36,14 +34,15 @@ background {
     box-sizing: border-box;
 }
 .conteiner {
+    width: 1440px;
+    height: 1560px;
     display: grid;
-    position: absolute;
-    grid-template-columns: 315px 310px 377px 242px;
-    grid-template-rows: 393px 200px 209px;
-    grid-gap: 22px;
-    padding: 40px 120px;
-    width:1310px;
-    height: 849px;
+    position: relative;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    padding: 22px;
+    border: 5px solid;
 }
 .conteiner img {
     width: 100%;
@@ -82,4 +81,44 @@ background {
 .pick8 {
     grid-column: 3/5;
     grid-row: 3/5;
+}
+.menue {
+    font-size: 20px;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding-right: 20px;
+    color: black;
+}
+@media (max-width: 600px) {
+    .list{
+        width: 390px;
+        height: 80px;
+    }
+    .conteiner{
+        width: 390px;
+        height: 790px;
+    }
+    .menue {
+        font-size: 10px;
+        display: flex;
+        justify-content:space-between;
+        align-items: center;
+        padding-right: 5px;
+        color: black;
+    }
+    .name {
+    display: flex;
+    font-family: 'Six Caps';
+    font-size: 20px;
+    align-items: center;
+    padding-left: 5px;
+    margin-right: 15px;
+    color: black;
+    }
+    .menu{
+        height: 80px;
+        width: 390px;
+        justify-content: flex-start;
+    }
 }
